🚀 feat: integrate RainbowKit wallet connect
- Installed @rainbow-me/rainbowkit, wagmi, viem with bun
- Added Web3Provider using RainbowKit and Wagmi in providers.tsx
- Wrapped app with Web3Provider in layout.tsx
- Added ConnectButton below the title in page.tsx
- Updated providers.tsx to use getDefaultConfig and baseSepolia chain

--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.4",
     "daisyui": "^5.0.20",
     "next": "15.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "viem": "^2.27.0",
+    "wagmi": "^2.14.16"
   },
   "devDependencies": {
     "typescript": "^5",
