🚀 fix: resolve type mismatch for contract call
- Removed gasPrice to fix EIP-1559/EIP-2930 type error in writeContractAsync
- Increased gas limit to 30,000,000 for contract deployment
- Ensured compatibility with Viem and Next.js

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@zoralabs/coins-sdk": "^0.0.8",
     "daisyui": "^5.0.20",
     "ky": "^1.8.1",
+    "lokijs": "^1.5.12",
     "next": "15.3.0",
     "openai": "^4.95.0",
     "react": "^19.0.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^19.0.0",
     "together-ai": "^0.15.0",
     "viem": "^2.27.0",
