--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "together-ai": "^0.15.0",
     "viem": "^2.27.0",
     "wagmi": "^2.14.16"
