--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-scroll-area": "^1.2.6",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.74.7",
     "@zoralabs/coins-sdk": "^0.0.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "daisyui": "^5.0.20",
+    "framer-motion": "^12.9.2",
     "ky": "^1.8.1",
     "lokijs": "^1.5.12",
+    "lucide-react": "^0.503.0",
     "next": "15.3.0",
     "openai": "^4.95.0",
+    "permitio": "^2.7.4",
     "react": "^19.0.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "tailwind-merge": "^3.2.0",
     "together-ai": "^0.15.0",
     "viem": "^2.27.0",
     "wagmi": "^2.14.16"
@@ -34,6 +45,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.8",
     "typescript": "^5"
   }
 }
