--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.74.7",
     "@wagmi/core": "^2.17.1",
+    "@zoralabs/coins": "^0.7.1",
     "@zoralabs/coins-sdk": "^0.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
