✨ feat(api): Integrate MinIO for image storage and update dependencies
- Added `minio` dependency in package.json for image storage functionality.
- Refactored save-image API to upload images to MinIO, handling base64 data and ensuring proper error responses.
- Updated image API to allow image uploads with base64 encoding and return the image path.
- Removed the deprecated get_weather API route for cleaner codebase.
- Enhanced error handling in image upload process for better user feedback.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ky": "^1.8.1",
     "lokijs": "^1.5.12",
     "lucide-react": "^0.503.0",
+    "minio": "^8.0.5",
     "next": "15.3.0",
     "openai": "^4.95.0",
     "permitio": "^2.7.4",
