✨ feat(env): Update environment variables and enhance dependency management
- Replaced deprecated API keys in .env.example with GAIA_API_KEY for improved configuration.
- Updated @tanstack/react-query dependency to version 5.76.0 in package.json for better performance.
- Added mongodb dependency to package.json for enhanced database functionality.
- Updated pnpm-lock.yaml to reflect changes in dependencies and ensure consistency.
- Removed unused API routes related to balance and data management for a cleaner codebase.
- Refactored chat API to utilize GAIA_API_KEY, streamlining the integration process.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@rainbow-me/rainbowkit": "^2.2.4",
-    "@tanstack/react-query": "^5.74.7",
+    "@tanstack/react-query": "^5.76.0",
     "@wagmi/core": "latest",
     "@zoralabs/coins": "^0.7.1",
     "@zoralabs/coins-sdk": "^0.1.1",
@@ -36,6 +36,7 @@
     "lokijs": "^1.5.12",
     "lucide-react": "^0.503.0",
     "minio": "^8.0.5",
+    "mongodb": "^6.16.0",
     "next": "15.3.0",
     "openai": "^4.95.0",
     "permitio": "^2.7.4",
