✨ feat(api): Enhance API routes and update environment configuration
- Added new MongoDB configuration variables to .env.example for improved database connectivity.
- Refactored image API to await parameters for better async handling.
- Updated metadata API to utilize ObjectId for MongoDB queries and improved error handling.
- Enhanced save-image API to include presigned URL generation for direct uploads to MinIO.
- Improved chat page to fetch data from the correct API endpoint and handle image uploads more efficiently.
- Updated MongoDB connection URL for better compatibility with local development.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,16 @@
 GAIA_API_KEY=
+TOGETHER_API_KEY=
+# MongoDB Configuration
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+MONGODB_HOST=
+MONGODB_PORT=
 
+# MinIO Configuration
+MINIO_ENDPOINT=
+MINIO_PORT=
+MINIO_USE_SSL=
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
+MINIO_PUBLIC_URL=
+NEXT_PUBLIC_DOMAIN=
