✨ feat(env): Update environment variables and refactor chat API
- Added new bundler service configuration variables to .env.example for enhanced API integration.
- Removed deprecated functions from the chat API route to streamline functionality and improve code clarity.

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,11 @@ MINIO_ACCESS_KEY=
 MINIO_SECRET_KEY=
 MINIO_PUBLIC_URL=
 NEXT_PUBLIC_DOMAIN=
+
+# Bundler service configuration
+NEXT_PUBLIC_BUNDLER_URL=https://api.pimlico.io/v2/137/rpc?apikey=YOUR_API_KEY
+NEXT_PUBLIC_CHAIN_ID=84532
+INFURA_PROJECT_ID=
+NEXT_PUBLIC_DELEGATION_STORAGE_API_KEY=
+NEXT_PUBLIC_DELEGATION_STORAGE_API_KEY_ID=
+NEXT_PUBLIC_DELEGATION_STORAGE_ENVIRONMENT=development
