--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongodb": "^6.16.0",
     "next": "15.3.0",
     "openai": "^4.95.0",
+    "permissionless": "^0.2.46",
     "permitio": "^2.7.4",
     "react": "^19.0.0",
     "react-confetti-explosion": "^2.1.2",
