--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.76.0",
     "@wagmi/core": "latest",
